[workspace]

members = [
    #
    "frender",
    "crates/*",
    "examples/counter-no-proc-macro",
    "examples/ssr-to-string",
    # "examples/counter",
    "examples/tic-tac-toe",
]

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"

[replace]
"callable:0.3.0" = { path = "../callable" }
