[package]
name = "frender"
version = "2.0.0-alpha.1"
authors = ["EqualMa <equalma@outlook.com>"]
edition = "2021"
description = "react in rust. functional rendering web ui"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.63"
js-sys = "0.3"
bg = { version = "0.2.0", optional = true }
frender-common = { version = "0.1.0", path = "../crates/frender-common" }
frender-ssr = { version = "0.1.0", path = "../crates/frender-ssr", default-features = false, optional = true }
frender-csr = { version = "0.1.0", path = "../crates/frender-csr", default-features = false, optional = true }
pin-project-lite = "0.2.9"
lazy-pinned = "0.1.0"
either = { version = "1.8.1", default-features = false, optional = true }

[dependencies.frender-hook-element]
path = "../crates/frender-hook-element"
version = "0.1.0"

[dependencies.frender-html]
path = "../crates/frender-html"
version = "0.1.0"
optional = true

[dependencies.frender-html-components]
path = "../crates/frender-html-components"
version = "0.1.0"
optional = true

[dependencies.frender-macros]
version = "1.0.0-alpha.8"
path = "../crates/frender-macros"

[dependencies.web-sys]
version = "0.3"
features = ["console", "Window", "Document", "Element"]

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[features]
default = ["html-components-simply-typed", "either"]
csr = [
    "frender-hook-element/csr",
    "frender-html-components?/csr",
    "frender-csr",
]
ssr = [
    "frender-hook-element/ssr",
    "frender-html-components?/ssr",
    "frender-ssr",
]
spawn = ["frender-hook-element/spawn"]
html = ["frender-html"]
html-components = ["html", "frender-html-components"]
html-components-simply-typed = [
    "html-components",
    "frender-html-components/simply-typed",
]
html-components-fully-typed = [
    "html-components",
    "frender-html-components/fully-typed",
]
either = ["dep:either", "frender-ssr?/either", "frender-csr?/either"]
