[package]
name = "frender"
version = "2.0.0-alpha.1"
authors = ["EqualMa <equalma@outlook.com>"]
edition = "2021"
description = "react in rust. functional rendering web ui"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.63"
js-sys = "0.3"
frender-common = { version = "0.1.0", path = "../crates/frender-common" }
frender-ssr = { version = "0.1.0", path = "../crates/frender-ssr", default-features = false }
pin-project-lite = "0.2.9"
lazy-pinned = "0.1.0"
either = { version = "1.8.1", default-features = false, optional = true }
hooks = { version = "3.0.0-alpha", default-features = false, features = [
    "ShareValue",
], optional = true }
frender-events = { version = "0.1.0", path = "../crates/frender-events" }
frender-element = { version = "0.1.0", path = "../crates/frender-element" }

[dependencies.frender-hook-element]
path = "../crates/frender-hook-element"
version = "0.1.0"

[dependencies.frender-html]
path = "../crates/frender-html"
version = "0.1.0"
optional = true

[dependencies.frender-macros]
version = "1.0.0-alpha.8"
path = "../crates/frender-macros"

[dev-dependencies]
futures-lite = "2.0.1"
wasm-bindgen-test = "0.3.13"

[features]
default = ["html-components", "either", "hooks"]
html = ["frender-html"]
html-components = ["html"]
either = ["dep:either", "frender-ssr/either", "frender-element/either"]
web = ["frender-hook-element/web"]
spawn = ["frender-hook-element/spawn"]
ssr = []
