[package]
name = "async-str-iter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
either = { version = "1.9.0", default-features = false, optional = true }
frender-common = { version = "0.1.0", path = "../frender-common" }
pin-project-lite = "0.2.13"

[dev-dependencies]
futures-lite = "2.0.1"

[features]
default = ["either"]
