[package]
name = "frender-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pin-project-lite = "0.2.9"
lazy-pinned = "0.1.0"
either = { version = "1.8.1", default-features = false, optional = true }
