[package]
name = "frender-csr-web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
frender-common = { version = "0.1.0", path = "../frender-common" }
frender-element = { version = "0.1.0", path = "../frender-element" }
frender-html = { version = "0.1.0", path = "../frender-html" }
futures-lite = "1.13.0"
gloo-events = "0.2.0"
js-sys = "0.3.64"
pin-project-lite = "0.2.13"
wasm-bindgen = "0.2.87"
wasm-bindgen-futures = { version = "0.4.37", optional = true }

[dependencies.web-sys]
version = "0.3.60"
features = [
    #
    "Event",
    "Text",
    "Node",
    "HtmlMenuElement",
    "HtmlPictureElement",
]

[features]
spawn = ["dep:wasm-bindgen-futures"]
