[package]
name = "frender-csr-wry"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-io = "2.2.2"
futures-lite = "2.2.0"
tao = { version = "0.24.1", default-features = false, features = ["rwh_05"] }
waker-fn = "1.1.0"
wry = "0.35.2"
