[package]
name = "frender-csr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pin-project-lite = "0.2.9"
gloo = { version = "0.8.0", features = ["futures"] }
wasm-bindgen = "0.2.83"
js-sys = "0.3.60"
wasm-bindgen-futures = { version = "0.4.33", optional = true }
lazy-pinned = "0.1.0"
frender-common = { version = "0.1.0", path = "../frender-common" }

[dependencies.futures-lite]
version = "1.12.0"
default-features = false

[dependencies.web-sys]
version = "0.3.60"
features = [
    #
    "Text",
    "Node",
]

[features]
spawn = ["dep:wasm-bindgen-futures"]
