[package]
name = "frender-csr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
frender-common = { version = "0.1.0", path = "../frender-common" }
either = { version = "1.9.0", default-features = false, optional = true }
pin-project-lite = "0.2.13"
