[package]
name = "frender-element"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-lite = { version = "1.12.0", default-features = false }
pin-project-lite = "0.2.9"
frender-html = { version = "0.1.0", path = "../frender-html", default-features = false }
frender-common = { version = "0.1.0", path = "../frender-common" }
frender-ssr = { version = "0.1.0", path = "../frender-ssr" }
indexmap = { version = "2.1.0", features = ["std"] }
either = { version = "1.9.0", default-features = false, optional = true }

[features]
either = ["dep:either", "frender-ssr/either"]
