[package]
name = "frender-events"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gloo = "0.8.0"
wasm-bindgen = "0.2.84"

[dependencies.web-sys]
version = "0.3.61"
features = [
    # "ClipboardEvent",
    "AnimationEvent",
    "ClipboardEvent",
    "CompositionEvent",
    "DragEvent",
    "EventTarget",
    "FocusEvent",
    "InputEvent",
    "KeyboardEvent",
    "MouseEvent",
    "PointerEvent",
    "SecurityPolicyViolationEvent",
    "TouchEvent",
    "TransitionEvent",
    "UiEvent",
    "WheelEvent",
]

[features]
csr = []

[dev-dependencies]
static_assertions = "1.1.0"
