[package]
name = "frender-events"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
callable = { version = "0.4.0", features = ["gat"] }
frender-common = { version = "0.1.0", path = "../frender-common" }
gloo = { version = "0.8.0", optional = true }
wasm-bindgen = { version = "0.2.84", optional = true }

[dependencies.web-sys]
version = "0.3.61"
optional = true
features = [
    "Touch",
    "TouchList",
    # "ClipboardEvent",
    "AnimationEvent",
    "ClipboardEvent",
    "CompositionEvent",
    "DragEvent",
    "EventTarget",
    "FocusEvent",
    "InputEvent",
    "KeyboardEvent",
    "MouseEvent",
    "PointerEvent",
    "SecurityPolicyViolationEvent",
    "TouchEvent",
    "TransitionEvent",
    "UiEvent",
    "WheelEvent",
]

[features]
web = ["dep:web-sys"]
