[package]
name = "frender-hook-element"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
frender-csr = { path = "../frender-csr", version = "0.1.0", optional = true }
frender-ssr = { path = "../frender-ssr", version = "0.1.0", optional = true }
pin-project-lite = "0.2.9"
lazy-pinned = "0.1.0"
hooks-core = { version = "2.1.0-alpha", default-features = false }
syn-lite = "0.1.0"

[features]
default = ["csr", "ssr"]       # TODO: remove
csr = ["frender-csr"]
spawn = ["frender-csr?/spawn"]
ssr = ["dep:frender-ssr"]
