[package]
name = "frender-html-common"
version = "0.1.0"
edition = "2021"

[dependencies]
async-str-iter = { version = "0.1.0", path = "../async-str-iter" }
either = { version = "1.8.1", default-features = false, optional = true }
frender-common = { version = "0.1.0", path = "../frender-common" }
frender-ssr-html = { version = "0.1.0", path = "../frender-ssr-html" }

[features]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
