[package]
name = "frender-html-components"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
frender-core = { path = "../frender-core", version = "0.1.0" }
frender-dom = { path = "../frender-dom", version = "0.1.0", optional = true }
frender-ssr = { path = "../frender-ssr", version = "0.1.0", optional = true }
frender-html = { path = "../frender-html", version = "0.1.0" }

[dependencies.frender-macros]
version = "1.0.0-alpha.8"
path = "../frender-macros"
optional = true
features = ["intrinsic-component"]

[features]
default = ["dom", "ssr", "html_macro_not_expand"]
dom = ["dep:frender-dom"]
ssr = ["dep:frender-ssr"]
html_macro_not_expand = ["dep:frender-macros"]
