[package]
name = "frender-html-components"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
frender-core = { path = "../frender-core", version = "0.1.0" }
frender-dom = { path = "../frender-dom", version = "0.1.0", optional = true }
frender-ssr = { path = "../frender-ssr", version = "0.1.0", optional = true }
frender-html = { path = "../frender-html", version = "0.1.0" }
pin-project-lite = "0.2.9"

[dependencies.frender-macros]
version = "1.0.0-alpha.8"
path = "../frender-macros"
optional = true
features = ["intrinsic-component"]

[dependencies.web-sys]
version = "0.3.60"
optional = true
features = [
    #
    # "ClipboardEvent",
    "AnimationEvent",
    "ClipboardEvent",
    "CompositionEvent",
    "DataTransfer",
    "DragEvent",
    "Element",
    "EventTarget",
    "FocusEvent",
    "HtmlAnchorElement",
    "HtmlAreaElement",
    "HtmlAudioElement",
    "HtmlBaseElement",
    "HtmlBodyElement",
    "HtmlBrElement",
    "HtmlButtonElement",
    "HtmlCanvasElement",
    "HtmlDListElement",
    "HtmlDataElement",
    "HtmlDataListElement",
    "HtmlDetailsElement",
    "HtmlDialogElement",
    "HtmlDivElement",
    "HtmlElement",
    "HtmlEmbedElement",
    "HtmlFieldSetElement",
    "HtmlFormElement",
    "HtmlHeadElement",
    "HtmlHeadingElement",
    "HtmlHrElement",
    "HtmlHtmlElement",
    "HtmlIFrameElement",
    "HtmlImageElement",
    "HtmlInputElement",
    "HtmlLabelElement",
    "HtmlLegendElement",
    "HtmlLiElement",
    "HtmlLinkElement",
    "HtmlMapElement",
    "HtmlMetaElement",
    "HtmlMeterElement",
    "HtmlModElement",
    "HtmlOListElement",
    "HtmlObjectElement",
    "HtmlOptGroupElement",
    "HtmlOptionElement",
    "HtmlOutputElement",
    "HtmlParagraphElement",
    "HtmlParamElement",
    "HtmlPreElement",
    "HtmlProgressElement",
    "HtmlQuoteElement",
    "HtmlScriptElement",
    "HtmlSelectElement",
    "HtmlSlotElement",
    "HtmlSourceElement",
    "HtmlSpanElement",
    "HtmlStyleElement",
    "HtmlTableCaptionElement",
    "HtmlTableCellElement",
    "HtmlTableColElement",
    "HtmlTableElement",
    "HtmlTableRowElement",
    "HtmlTableSectionElement",
    "HtmlTemplateElement",
    "HtmlTextAreaElement",
    "HtmlTimeElement",
    "HtmlTitleElement",
    "HtmlTrackElement",
    "HtmlUListElement",
    "HtmlVideoElement",
    "InputEvent",
    "KeyboardEvent",
    "MouseEvent",
    "Node",
    "PointerEvent",
    "SecurityPolicyViolationEvent",
    "Text",
    "TouchEvent",
    "TouchList",
    "TransitionEvent",
    "UiEvent",
    "WheelEvent",
]

[features]
default = ["dom", "ssr", "html_macro_not_expand"]
dom = ["dep:frender-dom", "dep:web-sys"]
ssr = ["dep:frender-ssr"]
html_macro_not_expand = ["dep:frender-macros"]
