[package]
name = "frender-html-expand"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prettyplease = "0.1.23"
quote = { version = "1.0.23", default-features = false }
syn = { version = "1.0.107", default-features = false }
