[package]
name = "frender-html"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bg = "0.2.0"
convert-js = "1.0.0-alpha.15"
frender-core = { path = "../frender-core", version = "0.1.0" }
frender-dom = { path = "../frender-dom", version = "0.1.0", optional = true }
frender-ssr = { path = "../frender-ssr", version = "0.1.0", optional = true }
futures-lite = { version = "1.12.0", default-features = false, optional = true }
ghost-lite = "0.1.2"
gloo = { version = "0.8.0", optional = true }
html-escape = { version = "0.2.13", optional = true }
pin-project-lite = "0.2.9"
wasm-bindgen = { version = "0.2.83", optional = true }

[dependencies.web-sys]
version = "0.3.60"
optional = true
features = [
    #
    # "ClipboardEvent",
    "AnimationEvent",
    "ClipboardEvent",
    "CompositionEvent",
    "DataTransfer",
    "DragEvent",
    "Element",
    "EventTarget",
    "FocusEvent",
    "HtmlAnchorElement",
    "HtmlAreaElement",
    "HtmlAudioElement",
    "HtmlBaseElement",
    "HtmlBodyElement",
    "HtmlBrElement",
    "HtmlButtonElement",
    "HtmlCanvasElement",
    "HtmlDListElement",
    "HtmlDataElement",
    "HtmlDataListElement",
    "HtmlDetailsElement",
    "HtmlDialogElement",
    "HtmlDivElement",
    "HtmlElement",
    "HtmlEmbedElement",
    "HtmlFieldSetElement",
    "HtmlFormElement",
    "HtmlHeadElement",
    "HtmlHeadingElement",
    "HtmlHrElement",
    "HtmlHtmlElement",
    "HtmlIFrameElement",
    "HtmlImageElement",
    "HtmlInputElement",
    "HtmlLabelElement",
    "HtmlLegendElement",
    "HtmlLiElement",
    "HtmlLinkElement",
    "HtmlMapElement",
    "HtmlMetaElement",
    "HtmlMeterElement",
    "HtmlModElement",
    "HtmlOListElement",
    "HtmlObjectElement",
    "HtmlOptGroupElement",
    "HtmlOptionElement",
    "HtmlOutputElement",
    "HtmlParagraphElement",
    "HtmlParamElement",
    "HtmlPreElement",
    "HtmlProgressElement",
    "HtmlQuoteElement",
    "HtmlScriptElement",
    "HtmlSelectElement",
    "HtmlSlotElement",
    "HtmlSourceElement",
    "HtmlSpanElement",
    "HtmlStyleElement",
    "HtmlTableCaptionElement",
    "HtmlTableCellElement",
    "HtmlTableColElement",
    "HtmlTableElement",
    "HtmlTableRowElement",
    "HtmlTableSectionElement",
    "HtmlTemplateElement",
    "HtmlTextAreaElement",
    "HtmlTimeElement",
    "HtmlTitleElement",
    "HtmlTrackElement",
    "HtmlUListElement",
    "HtmlVideoElement",
    "InputEvent",
    "KeyboardEvent",
    "MouseEvent",
    "Node",
    "PointerEvent",
    "SecurityPolicyViolationEvent",
    "Text",
    "TouchEvent",
    "TouchList",
    "TransitionEvent",
    "UiEvent",
    "WheelEvent",
]

[features]
default = ["dom", "ssr"]
dom = ["dep:frender-dom", "dep:gloo", "dep:web-sys", "dep:wasm-bindgen"]
ssr = ["dep:frender-ssr", "dep:html-escape", "dep:futures-lite"]
html_macro_not_expand = []
