[package]
name = "frender-html"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
convert-js = "1.0.0-alpha.15"
futures-lite = { version = "1.12.0", default-features = false, optional = true }
ghost-lite = "0.1.2"
gloo = { version = "0.8.0", optional = true }
html-escape = { version = "0.2.13", optional = true }
wasm-bindgen = { version = "0.2.83", optional = true }
pin-project-lite = "0.2.9"
frender-html-common = { version = "0.1.0", path = "../frender-html-common" }
frender-events = { version = "0.1.0", path = "../frender-events" }

[dependencies.web-sys]
version = "0.3.60"
optional = true
features = [
    #
    "DataTransfer",
    "Element",
    "HtmlAnchorElement",
    "HtmlAreaElement",
    "HtmlAudioElement",
    "HtmlBaseElement",
    "HtmlBodyElement",
    "HtmlBrElement",
    "HtmlButtonElement",
    "HtmlCanvasElement",
    "HtmlDListElement",
    "HtmlDataElement",
    "HtmlDataListElement",
    "HtmlDetailsElement",
    "HtmlDialogElement",
    "HtmlDivElement",
    "HtmlElement",
    "HtmlEmbedElement",
    "HtmlFieldSetElement",
    "HtmlFormElement",
    "HtmlHeadElement",
    "HtmlHeadingElement",
    "HtmlHrElement",
    "HtmlHtmlElement",
    "HtmlIFrameElement",
    "HtmlImageElement",
    "HtmlInputElement",
    "HtmlLabelElement",
    "HtmlLegendElement",
    "HtmlLiElement",
    "HtmlLinkElement",
    "HtmlMapElement",
    "HtmlMetaElement",
    "HtmlMeterElement",
    "HtmlModElement",
    "HtmlOListElement",
    "HtmlObjectElement",
    "HtmlOptGroupElement",
    "HtmlOptionElement",
    "HtmlOutputElement",
    "HtmlParagraphElement",
    "HtmlParamElement",
    "HtmlPreElement",
    "HtmlProgressElement",
    "HtmlQuoteElement",
    "HtmlScriptElement",
    "HtmlSelectElement",
    "HtmlSlotElement",
    "HtmlSourceElement",
    "HtmlSpanElement",
    "HtmlStyleElement",
    "HtmlTableCaptionElement",
    "HtmlTableCellElement",
    "HtmlTableColElement",
    "HtmlTableElement",
    "HtmlTableRowElement",
    "HtmlTableSectionElement",
    "HtmlTemplateElement",
    "HtmlTextAreaElement",
    "HtmlTimeElement",
    "HtmlTitleElement",
    "HtmlTrackElement",
    "HtmlUListElement",
    "HtmlVideoElement",
    "Node",
    "Text",
    "TouchList",
]

[features]
default = ["csr", "ssr"]                                                    # TODO: remove
csr = ["dep:gloo", "dep:web-sys", "dep:wasm-bindgen", "frender-events/csr"]
ssr = ["dep:html-escape", "dep:futures-lite"]
