[package]
name = "frender-html"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
convert-js = "1.0.0-alpha.15"
futures-lite = { version = "1.12.0", default-features = false, optional = true }
wasm-bindgen = { version = "0.2.83", optional = true }
pin-project-lite = "0.2.9"
frender-html-common = { version = "0.1.0", path = "../frender-html-common" }
frender-events = { version = "0.1.0", path = "../frender-events" }
frender-common = { version = "0.1.0", path = "../frender-common" }
# stack_dst = "0.8.1"
gloo-events = { version = "0.2.0", optional = true }
js-sys = { version = "0.3.64", optional = true }
frender-ssr = { version = "0.1.0", path = "../frender-ssr" }
frender-dom = { version = "0.1.0", path = "../frender-dom" }
async-str-iter = { version = "0.1.0", path = "../async-str-iter" }
indexmap = { version = "2.1.0", features = ["std"] }
either = { version = "1.9.0", default-features = false, optional = true }

[dependencies.web-sys]
version = "0.3.60"
optional = true
features = [
    #
    "DataTransfer",
    "Element",
    "HtmlAnchorElement",
    "HtmlAreaElement",
    "HtmlAudioElement",
    "HtmlBaseElement",
    "HtmlBodyElement",
    "HtmlBrElement",
    "HtmlButtonElement",
    "HtmlCanvasElement",
    "HtmlDListElement",
    "HtmlDataElement",
    "HtmlDataListElement",
    "HtmlDetailsElement",
    "HtmlDialogElement",
    "HtmlDivElement",
    "HtmlElement",
    "HtmlEmbedElement",
    "HtmlFieldSetElement",
    "HtmlFormElement",
    "HtmlHeadElement",
    "HtmlHeadingElement",
    "HtmlHrElement",
    "HtmlHtmlElement",
    "HtmlIFrameElement",
    "HtmlImageElement",
    "HtmlInputElement",
    "HtmlLabelElement",
    "HtmlLegendElement",
    "HtmlLiElement",
    "HtmlLinkElement",
    "HtmlMapElement",
    "HtmlMetaElement",
    "HtmlMeterElement",
    "HtmlModElement",
    "HtmlOListElement",
    "HtmlObjectElement",
    "HtmlOptGroupElement",
    "HtmlOptionElement",
    "HtmlOutputElement",
    "HtmlParagraphElement",
    "HtmlParamElement",
    "HtmlPreElement",
    "HtmlProgressElement",
    "HtmlQuoteElement",
    "HtmlScriptElement",
    "HtmlSelectElement",
    "HtmlSlotElement",
    "HtmlSourceElement",
    "HtmlSpanElement",
    "HtmlStyleElement",
    "HtmlTableCaptionElement",
    "HtmlTableCellElement",
    "HtmlTableColElement",
    "HtmlTableElement",
    "HtmlTableRowElement",
    "HtmlTableSectionElement",
    "HtmlTemplateElement",
    "HtmlTextAreaElement",
    "HtmlTimeElement",
    "HtmlTitleElement",
    "HtmlTrackElement",
    "HtmlUListElement",
    "HtmlVideoElement",
    "Node",
    "Text",
    "Touch",
    "TouchList",
]

[features]
web = [
    "frender-dom/web",
    "dep:gloo-events",
    "dep:js-sys",
    "dep:web-sys",
    "dep:wasm-bindgen",
]
props_builders_not_expanded = []
either = ["dep:either", "frender-ssr/either", "frender-dom/either"]
