[package]
name = "frender-intrinsic-component-macro"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = "1.0.86"
quote = "1.0"
darling = "0.14"
proc-macro2 = "1.0.36"
frender-macro-utils = { version = "0.1.0", path = "../frender-macro-utils" }
