[package]
name = "frender-macros"
version = "1.0.0-alpha.1" # replace version
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = "1.0"
quote = "1.0"
darling = "0.13"
regex = "1"
lazy_static = "1"
proc-macro2 = "1.0.36"
