[package]
name = "frender-macros"
version = "1.0.0-alpha.5" # replace version
edition = "2021"
description = "macros for frender"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = "1.0.86"
quote = "1.0"
darling = "0.13.1"
regex = "1"
lazy_static = "1"
proc-macro2 = "1.0.36"
