[package]
name = "react-html"
version = "1.0.0-alpha.3" # replace version
edition = "2021"
description = "react html components for frender"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.63"
js-sys = "0.3"
convert-js = "1.0.0-alpha.15"

[dependencies.web-sys]
version = "0.3"
features = [
    "Element",
    "HtmlElement",
    "HtmlAnchorElement",
    "HtmlButtonElement",
    "UiEvent",
    "MouseEvent",
    "HtmlAreaElement",
    "HtmlAudioElement",
    "HtmlBaseElement",
    "HtmlBodyElement",
    "HtmlBrElement",
    "HtmlCanvasElement",
    "HtmlTableColElement",
    "HtmlDataElement",
    "HtmlDataListElement",
    "HtmlDialogElement",
    "HtmlDivElement",
    "HtmlDListElement",
    "HtmlEmbedElement",
    "HtmlFieldSetElement",
    "HtmlFormElement",
    "HtmlHeadingElement",
    "HtmlHeadElement",
    "HtmlHrElement",
    "HtmlHtmlElement",
    "HtmlIFrameElement",
    "HtmlImageElement",
    "HtmlInputElement",
    "HtmlModElement",
]

[dependencies.react-rs]
version = "1.0.0-alpha.3" # replace version
path = "../react"

[dependencies.frender-macros]
version = "1.0.0-alpha.3" # replace version
path = "../frender-macros"

[dev-dependencies]
wasm-bindgen-test = "0.3"
