[package]
name = "react-rs"
version = "1.0.0-alpha.2" # replace version
edition = "2021"
description = "react runtime for frender"
license = "MIT"

[lib]
name = "react"
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
react-sys = "1.0.0-alpha.20"
wasm-bindgen = "0.2.63"
forgotten = "1.1"
js-sys = "0.3"
once_cell = "1.8"
convert-js = "1.0.0-alpha.14"

[dependencies.web-sys]
version = "0.3"
features = [
    "Element",
    "HtmlElement",
    "HtmlAnchorElement",
    # "HtmlAbbrElement",
]
# ""

[dependencies.frender-macros]
version = "1.0.0-alpha.2" # replace version
path = "../frender-macros"

[dev-dependencies]
wasm-bindgen-test = "0.3"
