[package]
name = "counter"
version = "0.1.0"
authors = ["EqualMa <equalma@outlook.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
frender = { path = "../../frender", features = ["web", "spawn"] }
hooks = "3.0.0-alpha"
gloo = "0.8.0"
bg = "0.2.0"
