[package]
name = "keyed-elements"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
frender = { path = "../../frender", features = [
    "web",
    "spawn",
    "bg",
    "either",
] }
hooks = "2.3.0-alpha"
gloo = "0.8.0"
either = "1.8.1"
